plugins/kotlin/idea/tests/testData/gradle/multiplatform/core/features/publishedLibrarySources/expectActualInStdlibSources/stdlib/src/commonMain/kotlin/stdlib.kt
package kotlin.collections

internal expect fun <!LINE_MARKER("descr='Has actuals in [js, jvm, native] modules'; targets=[(text=js; icon=nodes/ppLibFolder.svg); (text=jvm; icon=nodes/ppLibFolder.svg); (text=native; icon=nodes/ppLibFolder.svg)]")!>mapCapacity<!>(expectedSize: Int): Int
